# osgexercise1

./: CMakeLists.txt  LICENSE  README  graniterock_shiny.osgt  main.cpp  main.h  mycustomcameramanipulator.cpp  mycustomcameramanipulator.hpp  shader.fs  shader.vs
